[project]
name = "alpha-pulse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "andersonvc", email = "" }
]
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.11.16",
    "beautifulsoup4>=4.13.3",
    "graphviz>=0.20.3",
    "ipython>=9.1.0",
    "langchain>=0.3.23",
    "langchain-core>=0.3.51",
    "langchain-openai>=0.3.12",
    "langgraph>=0.3.29",
    "openai>=1.73.0",
    "polygon-api-client>=1.14.4",
    "prettyprint>=0.1.5",
    "pydantic>=2.11.3",
    "python-dotenv>=1.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
