[project]
name = "alpha-pulse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "andersonvc", email = "" }
]
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.11.16",
    "aiolimiter>=1.2.1",
    "beautifulsoup4>=4.13.3",
    "duckdb>=1.2.2",
    "duckdb-engine>=0.17.0",
    "graphviz>=0.20.3",
    "ipython>=9.1.0",
    "langchain>=0.3.23",
    "langchain-core>=0.3.51",
    "langchain-openai>=0.3.12",
    "langgraph>=0.3.29",
    "lxml>=5.3.2",
    "openai>=1.73.0",
    "pandas>=2.2.3",
    "polygon-api-client>=1.14.4",
    "prettyprint>=0.1.5",
    "pyarrow>=19.0.1",
    "pydantic>=2.11.3",
    "pymupdf>=1.25.5",
    "python-dotenv>=1.1.0",
    "sqlalchemy>=2.0.40",
    "tenacity>=9.1.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "jupyterlab>=4.4.1",
    "nest-asyncio>=1.6.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
]
